--- a/index.html
+++ b/index.html
@@ -3,57 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Create custom Bitcoin tokens with ultra-advanced SEO and blockchain integration.">
-  <meta name="keywords" content="Bitcoin, Crypto, Token, Blockchain, Smart Contract, WalletConnect">
+  <meta name="description" content="Create and deploy Bitcoin tokens with WalletConnect integration or offline simulation.">
+  <meta name="keywords" content="Bitcoin, Token Creator, Blockchain, WalletConnect, Crypto, Smart Contracts">
   <meta name="author" content="Rekt Developer">
   <meta property="og:title" content="Bitcoin Token Creator">
-  <meta property="og:description" content="Generate Bitcoin tokens easily with advanced features.">
-  <meta property="og:image" content="assets/images/og-image.png">
-  <meta property="og:url" content="https://example.com">
+  <meta property="og:description" content="Easily create Bitcoin tokens with advanced SEO and blockchain integration.">
+  <meta property="og:image" content="assets/images/token-preview.png">
+  <meta property="og:url" content="https://yourdomain.com">
   <meta name="twitter:card" content="summary_large_image">
-  <title>Bitcoin Token Creator</title>
-  <link rel="manifest" href="meta/manifest.json">
   <link rel="stylesheet" href="styles/styles.css">
-  <!-- Importing advanced CSS libraries -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="manifest" href="meta/manifest.json">
+  <link rel="icon" href="assets/favicon.ico">
+  <title>Bitcoin Token Creator</title>
 </head>
 <body>
-  <header>
-    <div class="container text-center">
-      <h1>Bitcoin Token Creator</h1>
-      <p>Generate custom tokens with ease and flexibility!</p>
-    </div>
+  <header class="text-center bg-dark text-light py-4">
+    <h1>Bitcoin Token Creator</h1>
+    <p>Fast, Secure, and User-Friendly Token Generation</p>
   </header>
-  
-  <main class="container">
+
+  <main class="container my-4">
+    <div id="wallet-status" class="alert alert-warning" role="alert">
+      Wallet not connected. You can still simulate token creation.
+    </div>
+    <button id="connect-wallet" class="btn btn-success">Connect Wallet</button>
+
     <form id="token-form" class="mt-4">
       <div class="mb-3">
-        <label for="name" class="form-label">Token Name</label>
-        <input type="text" id="name" class="form-control" placeholder="e.g., MyToken" required>
+        <label for="tokenName" class="form-label">Token Name</label>
+        <input type="text" id="tokenName" class="form-control" placeholder="Enter Token Name" required>
       </div>
       <div class="mb-3">
-        <label for="symbol" class="form-label">Token Symbol</label>
-        <input type="text" id="symbol" class="form-control" placeholder="e.g., MTK" required>
+        <label for="tokenSymbol" class="form-label">Token Symbol</label>
+        <input type="text" id="tokenSymbol" class="form-control" placeholder="Enter Token Symbol" required>
       </div>
       <div class="mb-3">
-        <label for="supply" class="form-label">Total Supply</label>
-        <input type="number" id="supply" class="form-control" placeholder="e.g., 1000000" required>
+        <label for="totalSupply" class="form-label">Total Supply</label>
+        <input type="number" id="totalSupply" class="form-control" placeholder="Enter Total Supply" required>
       </div>
       <button type="submit" class="btn btn-primary w-100">Create Token</button>
     </form>
-    <div id="output" class="mt-3 text-success"></div>
+    <div id="result" class="mt-4"></div>
   </main>
 
-  <footer class="text-center py-4 bg-dark text-light">
-    <p>Powered by <a href="https://t.me/ScriptersShop" target="_blank">ScriptersShop</a></p>
+  <footer class="text-center bg-dark text-light py-3">
+    <p>Powered by <a href="https://t.me/ScriptersShop" class="text-light" target="_blank">ScriptersShop</a></p>
   </footer>
 
-  <!-- Importing JavaScript libraries -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  <script src="scripts/wallet.js"></script>
   <script src="scripts/main.js"></script>
   <script src="scripts/seo.js"></script>
-  <script src="scripts/wallet.js"></script>
+  <script src="scripts/analytics.js"></script>
 </body>
 </html>
